tests/spec/parse/snapshots/lambda_no_params_after_let.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn make_counter() -> fn() -> int {
    let mut n = 0
    || -> int {
      n = n + 1
      n
    }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "make_counter",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 12,
        },
        generics: [],
        params: [],
        return_annotation: Function {
            params: [],
            return_type: Constructor {
                name: "int",
                params: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 30,
                    byte_length: 3,
                },
            },
            span: Span {
                file_id: 0,
                byte_offset: 22,
                byte_length: 11,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "n",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 46,
                                    byte_length: 1,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                            mut_span: Some(
                                Span {
                                    file_id: 0,
                                    byte_offset: 42,
                                    byte_length: 3,
                                },
                            ),
                        },
                        value: Literal {
                            literal: Integer {
                                value: 0,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 50,
                                byte_length: 1,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 38,
                            byte_length: 13,
                        },
                    },
                    Lambda {
                        params: [],
                        return_annotation: Constructor {
                            name: "int",
                            params: [],
                            span: Span {
                                file_id: 0,
                                byte_offset: 60,
                                byte_length: 3,
                            },
                        },
                        body: Block {
                            items: [
                                Assignment {
                                    target: Identifier {
                                        value: "n",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 70,
                                            byte_length: 1,
                                        },
                                        resolution: Unresolved,
                                    },
                                    value: Binary {
                                        operator: Addition,
                                        left: Identifier {
                                            value: "n",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 74,
                                                byte_length: 1,
                                            },
                                            resolution: Unresolved,
                                        },
                                        right: Literal {
                                            literal: Integer {
                                                value: 1,
                                                text: None,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 78,
                                                byte_length: 1,
                                            },
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 74,
                                            byte_length: 5,
                                        },
                                    },
                                    compound_operator: None,
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 70,
                                        byte_length: 9,
                                    },
                                },
                                Identifier {
                                    value: "n",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 84,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                            ],
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 64,
                                byte_length: 25,
                            },
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 54,
                            byte_length: 35,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 34,
                    byte_length: 57,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 90,
        },
    },
]
