tests/spec/parse/snapshots/lambda_single_param.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    let double = |x| x * 2;
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "double",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 6,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Lambda {
                            params: [
                                Binding {
                                    pattern: Identifier {
                                        identifier: "x",
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 29,
                                            byte_length: 1,
                                        },
                                        binding: None,
                                    },
                                    annotation: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                },
                            ],
                            return_annotation: Unknown,
                            body: Binary {
                                operator: Multiplication,
                                left: Identifier {
                                    value: "x",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 32,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                                right: Literal {
                                    literal: Integer {
                                        value: 2,
                                        text: None,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 36,
                                        byte_length: 1,
                                    },
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 32,
                                    byte_length: 5,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 28,
                                byte_length: 9,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 22,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 29,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 39,
        },
    },
]
