tests/spec/parse/snapshots/lambda_with_block_body.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    let process = |x| {
      let doubled = x * 2;
      doubled + 1
    };
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "process",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 7,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Lambda {
                            params: [
                                Binding {
                                    pattern: Identifier {
                                        identifier: "x",
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 30,
                                            byte_length: 1,
                                        },
                                        binding: None,
                                    },
                                    annotation: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                },
                            ],
                            return_annotation: Unknown,
                            body: Block {
                                items: [
                                    Let {
                                        binding: Binding {
                                            pattern: Identifier {
                                                identifier: "doubled",
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 43,
                                                    byte_length: 7,
                                                },
                                                binding: None,
                                            },
                                            annotation: None,
                                            ty: Var {
                                                id: uninferred,
                                            },
                                        },
                                        value: Binary {
                                            operator: Multiplication,
                                            left: Identifier {
                                                value: "x",
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 53,
                                                    byte_length: 1,
                                                },
                                                resolution: Unresolved,
                                            },
                                            right: Literal {
                                                literal: Integer {
                                                    value: 2,
                                                    text: None,
                                                },
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 57,
                                                    byte_length: 1,
                                                },
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 53,
                                                byte_length: 5,
                                            },
                                        },
                                        mode: Plain,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 39,
                                            byte_length: 19,
                                        },
                                    },
                                    Binary {
                                        operator: Addition,
                                        left: Identifier {
                                            value: "doubled",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 64,
                                                byte_length: 7,
                                            },
                                            resolution: Unresolved,
                                        },
                                        right: Literal {
                                            literal: Integer {
                                                value: 1,
                                                text: None,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 74,
                                                byte_length: 1,
                                            },
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 64,
                                            byte_length: 11,
                                        },
                                    },
                                ],
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 33,
                                    byte_length: 46,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 29,
                                byte_length: 50,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 64,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 71,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 81,
        },
    },
]
