tests/spec/parse/snapshots/lambda_with_param_types.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    let multiply = |a: int, b: int| a * b;
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "multiply",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 8,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Lambda {
                            params: [
                                Binding {
                                    pattern: Identifier {
                                        identifier: "a",
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 31,
                                            byte_length: 1,
                                        },
                                        binding: None,
                                    },
                                    annotation: Some(
                                        Constructor {
                                            name: "int",
                                            params: [],
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 34,
                                                byte_length: 3,
                                            },
                                        },
                                    ),
                                    ty: Var {
                                        id: uninferred,
                                    },
                                },
                                Binding {
                                    pattern: Identifier {
                                        identifier: "b",
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 39,
                                            byte_length: 1,
                                        },
                                        binding: None,
                                    },
                                    annotation: Some(
                                        Constructor {
                                            name: "int",
                                            params: [],
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 42,
                                                byte_length: 3,
                                            },
                                        },
                                    ),
                                    ty: Var {
                                        id: uninferred,
                                    },
                                },
                            ],
                            return_annotation: Unknown,
                            body: Binary {
                                operator: Multiplication,
                                left: Identifier {
                                    value: "a",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 47,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                                right: Identifier {
                                    value: "b",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 51,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 47,
                                    byte_length: 5,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 30,
                                byte_length: 22,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 37,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 44,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 54,
        },
    },
]
